force-app/main/default/objects/agrid__Column__c/agrid__Column__c.object-meta.xml
<CustomObject>
    <label>Column</label>
    <nameField>
        <displayFormat>GCOL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>