force-app/main/default/objects/agrid__Column__c/fields/agrid__Action_View_Type__c.field-meta.xml
<CustomField>
    <fullName>agrid__Action_View_Type__c</fullName>
    <label>Action View Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>