force-app/main/default/objects/agrid__Column__c/fields/agrid__Aggregation__c.field-meta.xml
<CustomField>
    <fullName>agrid__Aggregation__c</fullName>
    <label>Aggregation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>