force-app/main/default/objects/agrid__Column__c/fields/agrid__Compact_Layout__c.field-meta.xml
<CustomField>
    <fullName>agrid__Compact_Layout__c</fullName>
    <label>Compact Layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>