force-app/main/default/objects/agrid__Column__c/fields/agrid__Disable_Bulk_Edit__c.field-meta.xml
<CustomField>
    <fullName>agrid__Disable_Bulk_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Bulk Edit</label>
    <type>Checkbox</type>
</CustomField>