force-app/main/default/objects/agrid__Column__c/fields/agrid__Editable__c.field-meta.xml
<CustomField>
    <fullName>agrid__Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To allow inline editing in the column.</description>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>