force-app/main/default/objects/agrid__Column__c/fields/agrid__Exclude_Export__c.field-meta.xml
<CustomField>
    <fullName>agrid__Exclude_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Export</label>
    <type>Checkbox</type>
</CustomField>