force-app/main/default/objects/agrid__Column__c/fields/agrid__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>agrid__Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>