force-app/main/default/objects/agrid__Column__c/fields/agrid__Field_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>agrid__Field_Data_Type__c</fullName>
    <label>Field Data Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>