force-app/main/default/objects/agrid__Column__c/fields/agrid__Filterable__c.field-meta.xml
<CustomField>
    <fullName>agrid__Filterable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filterable</label>
    <type>Checkbox</type>
</CustomField>