force-app/main/default/objects/agrid__Column__c/fields/agrid__Format__c.field-meta.xml
<CustomField>
    <fullName>agrid__Format__c</fullName>
    <description>To store the format for Date and Currency.</description>
    <label>Format</label>
    <length>40</length>
    <type>Text</type>
</CustomField>