force-app/main/default/objects/agrid__Column__c/fields/agrid__Label__c.field-meta.xml
<CustomField>
    <fullName>agrid__Label__c</fullName>
    <description>The Text to display as a Column name in Table.</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>