force-app/main/default/objects/agrid__Column__c/fields/agrid__Order__c.field-meta.xml
<CustomField>
    <fullName>agrid__Order__c</fullName>
    <description>To define column order for the table.</description>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>