force-app/main/default/objects/agrid__Column__c/fields/agrid__Promote_to_Header__c.field-meta.xml
<CustomField>
    <fullName>agrid__Promote_to_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promote to Header</label>
    <type>Checkbox</type>
</CustomField>