force-app/main/default/objects/agrid__Column__c/fields/agrid__Searchable__c.field-meta.xml
<CustomField>
    <fullName>agrid__Searchable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Searchable</label>
    <type>Checkbox</type>
</CustomField>