force-app/main/default/objects/agrid__Column__c/fields/agrid__Sortable__c.field-meta.xml
<CustomField>
    <fullName>agrid__Sortable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sortable</label>
    <type>Checkbox</type>
</CustomField>