force-app/main/default/objects/agrid__Column__c/fields/agrid__Width__c.field-meta.xml
<CustomField>
    <fullName>agrid__Width__c</fullName>
    <label>Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>